# asterisk-chan-dongle

./: .gitignore  CMakeLists.txt  Makefile.in  app.c  at_command.c  at_command.h  at_parse.c  at_parse.h  at_response.c  chan_dongle.c  chan_dongle.h  channel.c  channel.h  char_conv.c  config.h.in  pdu.c  pdu.h
cmake/: Armbian.cmake  FindIconv.cmake  defines.cmake
